k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vex-tournament
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: vex-tournament
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vex-tournament
            port:
              number: 80
